--- a/YubicoDotNetClient/YubicoDotNetClient.csproj
+++ b/YubicoDotNetClient/YubicoDotNetClient.csproj
@@ -40,8 +40,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="YubicoResponseImpl.cs" />
+    <Compile Include="YubicoResponseStatus.cs" />
     <Compile Include="YubicoClient.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="YubicoResponse.cs" />
+    <Compile Include="YubicoValidate.cs" />
+    <Compile Include="YubicoValidationException.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
