--- a/YubicoDotNetClient/YubicoDotNetClient.csproj
+++ b/YubicoDotNetClient/YubicoDotNetClient.csproj
@@ -47,6 +47,7 @@
     <Compile Include="YubicoResponse.cs" />
     <Compile Include="YubicoValidate.cs" />
     <Compile Include="YubicoValidationException.cs" />
+    <Compile Include="YubicoValidationFailure.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
