Refactoring to follow C# conventions.  Misc cleanup

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,18 @@
+[Oo]bj/
+[Bb]in/
+*.user
+/TestResults
+*.vspscc
+*.vssscc
+deploy
+deploy/*
 *.suo
-bin/
-obj/
+*.cache
+*.docstates
+_ReSharper.*
+*.csproj.user
+*[Rr]e[Ss]harper.user
+_ReSharper.*/
+packages/*
+msbuild.log
+PublishProfiles/
